--- a/_site.yml
+++ b/_site.yml
@@ -8,8 +8,6 @@ navbar:
 # 为了在网页上有相应的link要先增加代码
     - text: "About"
       href: about.html
-    - text: "Plotly"
-      href: plotly.html
     - text: "Dashbroad"
       href: dashbroad.html
     - icon: fa-envelope fa-lg
@@ -18,5 +16,5 @@ navbar:
       href: http://github.com/RuoyuanQian/
 output:
   html_document:
-    theme: cerulean
+    theme: cosmo
     
